--- a/menu/src/main/res/layout/activity_waiting_time.xml
+++ b/menu/src/main/res/layout/activity_waiting_time.xml
@@ -17,7 +17,8 @@
             android:layout_height="50px"
             android:layout_marginLeft="50px"
             android:layout_marginTop="58px"
-            android:src="@mipmap/left_arrow" />
+            android:src="@mipmap/left_arrow"
+            android:onClick="goBack"/>
 
         <ImageView
             android:layout_width="match_parent"
