--- a/menu/src/main/res/layout/recommend_fragment.xml
+++ b/menu/src/main/res/layout/recommend_fragment.xml
@@ -141,6 +141,7 @@
                     android:drawableLeft="@mipmap/head_icon"
                     android:textSize="@dimen/normal_text_size"
                     android:drawablePadding="10dp"
+                    android:visibility="invisible"
                     android:textColor="@color/text_color_dark_gray"
                     />
 
@@ -150,6 +151,7 @@
                     android:text="这道菜不错"
                     android:drawableLeft="@mipmap/head_icon"
                     android:textSize="@dimen/normal_text_size"
+                    android:visibility="invisible"
                     android:drawablePadding="10dp"
                     android:layout_marginTop="5dp"
                     android:textColor="@color/text_color_dark_gray"
