--- a/menu/src/main/res/layout/end_activity.xml
+++ b/menu/src/main/res/layout/end_activity.xml
@@ -272,6 +272,7 @@
 
 
                 <TextView
+                    android:id="@+id/end_activity_logout_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/big_text_size"
