--- a/menu/src/main/res/layout/recommend_fragment.xml
+++ b/menu/src/main/res/layout/recommend_fragment.xml
@@ -59,16 +59,16 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@mipmap/reduce"
+                            android:padding="3dip"
                             android:background="@null"
                             />
 
                         <TextView
+                            android:id="@+id/recommend_fragment_dishes_num_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="1"
                             android:textSize="@dimen/normal_text_size"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
                             android:textColor="@color/title_bar_normal_color"
                             />
 
@@ -77,6 +77,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@mipmap/add"
+                            android:padding="3dip"
                             android:background="@null"
                             />
                     </LinearLayout>
