--- a/menu/src/main/res/layout/login_activity.xml
+++ b/menu/src/main/res/layout/login_activity.xml
@@ -96,6 +96,7 @@
                         android:layout_marginRight="5dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:onClick="getVerificationCode"
                         />
 
                 </RelativeLayout>
