--- a/menu/src/main/res/layout/end_activity.xml
+++ b/menu/src/main/res/layout/end_activity.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:orientation="vertical">
     <ImageView
-        android:id="@+id/end_activity_iv"
+        android:id="@+id/end_activity_back_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/back"
