--- a/menu/src/main/res/layout/activity_waiting_time.xml
+++ b/menu/src/main/res/layout/activity_waiting_time.xml
@@ -12,13 +12,34 @@
         android:orientation="vertical"
         >
 
-        <ImageView
-            android:layout_width="30px"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="50px"
             android:layout_marginLeft="50px"
             android:layout_marginTop="58px"
-            android:src="@mipmap/left_arrow"
-            android:onClick="goBack"/>
+            >
+
+            <ImageView
+                android:layout_width="30px"
+                android:layout_height="50px"
+                android:layout_marginLeft="50px"
+
+                android:src="@mipmap/left_arrow"
+                android:onClick="goBack"/>
+
+            <TextView
+                android:layout_width="200px"
+                android:layout_height="50px"
+                android:layout_marginRight="50px"
+                android:layout_alignParentRight="true"
+
+                android:text="@string/heathText"
+                android:textSize="@dimen/big_text_size"
+                android:textColor="@color/dark_gray"
+                android:onClick="goToHeathPage"/>
+        </RelativeLayout>
+
+
 
         <ImageView
             android:layout_width="match_parent"
