--- a/menu/src/main/res/layout/menu_item_layout.xml
+++ b/menu/src/main/res/layout/menu_item_layout.xml
@@ -31,7 +31,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="3dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ad_1" />
 
         <View
             android:layout_width="30dp"
