--- a/menu/src/main/res/layout/main_menu_fragment.xml
+++ b/menu/src/main/res/layout/main_menu_fragment.xml
@@ -4,15 +4,13 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/transparent"
         android:gravity="center_horizontal"
-        android:layout_marginTop="80dp"
         android:orientation="horizontal">
 
         <RadioGroup
@@ -25,7 +23,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp">
 
