增加首页推荐ui

--- a/menu/src/main/res/layout/menu_item_layout.xml
+++ b/menu/src/main/res/layout/menu_item_layout.xml
@@ -209,6 +209,7 @@
                     android:textColor="@color/text_color_gray"
                     android:paddingLeft="3dp"
                     android:paddingRight="3dp"
+                    android:text="0"
                     />
 
                 <ImageView
