--- a/menu/src/main/res/layout/main_activity.xml
+++ b/menu/src/main/res/layout/main_activity.xml
@@ -47,6 +47,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:gravity="center"
+                android:paddingTop="10dp"
                 android:textColor="@color/white"
                 android:text="充值500\n送100"
                 android:layout_centerInParent="true"
