--- a/menu/src/main/res/layout/main_menu_recommend_listview_item.xml
+++ b/menu/src/main/res/layout/main_menu_recommend_listview_item.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <android.support.v4.widget.Space
+        android:layout_width="wrap_content"
+        android:layout_height="358px" />
 
     <LinearLayout
         android:layout_width="300px"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="wrap_content"
@@ -18,6 +23,7 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -80,4 +86,6 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+
+</RelativeLayout>
