--- a/menu/src/main/res/layout/modiy_order_num.xml
+++ b/menu/src/main/res/layout/modiy_order_num.xml
@@ -17,6 +17,7 @@
         android:text="1"
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
+        android:textColor="@color/text_color_gray"
         />
 
     <ImageView
