--- a/menu/src/main/res/layout/main_activity.xml
+++ b/menu/src/main/res/layout/main_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_bg_color">
@@ -8,51 +7,48 @@
     <include
         android:id="@+id/main_activity_title_bar"
         layout="@layout/title_bar_layout"
-        android:layout_marginTop="42px"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-    </include>
+        android:layout_marginTop="42px"></include>
 
 
     <RelativeLayout
         android:id="@+id/main_activity_recommend_rel"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:paddingTop="10px"
-        android:layout_height="358px">
+        android:layout_height="358px"
+        android:layout_alignParentBottom="true"
+        android:paddingTop="10px">
 
         <com.feasttime.widget.HorizontalListView
             android:id="@+id/main_activity_recommend_lv"
-            android:layout_marginLeft="220px"
-            android:layout_marginRight="220px"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="220px"
+            android:layout_marginRight="220px">
 
         </com.feasttime.widget.HorizontalListView>
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            >
+            android:layout_alignParentTop="true">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/recharge_icon"
                 android:layout_centerInParent="true"
-                />
+                android:src="@mipmap/recharge_icon" />
 
             <TextView
                 android:id="@+id/main_activity_recharge_tv"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:layout_centerInParent="true"
                 android:gravity="center"
                 android:paddingTop="10dp"
-                android:textColor="@color/white"
                 android:text="充值500\n送100"
-                android:layout_centerInParent="true"
-                />
+                android:textColor="@color/white" />
         </RelativeLayout>
 
 
@@ -61,15 +57,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="40px"
-        android:layout_below="@+id/main_activity_title_bar"
         android:layout_above="@+id/main_activity_recommend_rel"
+        android:layout_below="@+id/main_activity_title_bar"
+        android:layout_marginTop="40px"
         android:orientation="vertical">
+
         <FrameLayout
             android:id="@+id/main_fragment_container_fl"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </FrameLayout>
+            android:layout_height="wrap_content"></FrameLayout>
     </LinearLayout>
 
+    <include
+        android:layout_marginTop="160px"
+        layout="@layout/help_toolbar"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        >
+
+    </include>
 </RelativeLayout>
