--- a/menu/src/main/res/layout/title_bar_layout.xml
+++ b/menu/src/main/res/layout/title_bar_layout.xml
@@ -27,11 +27,10 @@
 
 
 
-    <LinearLayout
-        android:id="@+id/title_bar_cart_ll"
+    <RelativeLayout
+        android:id="@+id/title_bar_cart_rel"
         android:layout_width="85dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentRight="true"
         android:gravity="center"
         >
@@ -45,10 +44,22 @@
             android:foregroundGravity="center"
             />
 
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/title_bar_cart_num_tv"
+            android:layout_width="35px"
+            android:layout_height="35px"
+            android:gravity="center"
+            android:layout_marginLeft="70px"
+            android:background="@drawable/red_cycle_shape"
+            android:textColor="@color/white"
+            android:text="0"
+            />
+
+    </RelativeLayout>
 
     <RelativeLayout
-        android:layout_toLeftOf="@+id/title_bar_cart_ll"
+        android:layout_toLeftOf="@+id/title_bar_cart_rel"
         android:layout_width="match_parent"
         android:background="@drawable/title_bar_bg"
         android:layout_height="86px"
