--- a/menu/src/main/res/layout/title_bar_layout.xml
+++ b/menu/src/main/res/layout/title_bar_layout.xml
@@ -32,7 +32,6 @@
         android:layout_width="85dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:gravity="center"
         >
 
         <ImageButton
@@ -42,6 +41,7 @@
             android:src="@mipmap/cart_icon"
             android:background="@drawable/right_menu_bg"
             android:foregroundGravity="center"
+            android:layout_centerHorizontal="true"
             />
 
 
@@ -50,9 +50,11 @@
             android:layout_width="35px"
             android:layout_height="35px"
             android:gravity="center"
-            android:layout_marginLeft="70px"
+            android:layout_marginLeft="50px"
             android:background="@drawable/red_cycle_shape"
             android:textColor="@color/white"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
             android:text="0"
             />
 
