--- a/menu/src/main/res/values/dimens.xml
+++ b/menu/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="normal_text_size">13dp</dimen>
     <dimen name="small_text_size">10dp</dimen>
     <dimen name="very_small_text_size">8dp</dimen>
+    <dimen name="biggest_text_size">35dp</dimen>
 </resources>
