--- a/menu/src/main/res/layout/activity_silent_ad.xml
+++ b/menu/src/main/res/layout/activity_silent_ad.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
 
-        <com.ipinyou.ads.IpinyouBanner
+        <com.ipinyou.ads.OnlyShowView
             android:id="@+id/bannerAD"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
